test/cli/test/restrict_ingress_host/kyverno-test.yaml
name: unique-ingress-host
policies:
- restrict_ingress_host.yaml
resources:
- resource.yaml
results:
- kind: Ingress
  policy: unique-ingress-host
  resources:
  - ingress-kyverno-host
  result: fail
  rule: check-single-host
- kind: Ingress
  policy: unique-ingress-host
  resources:
  - ingress-foo-host
  result: skip
  rule: check-single-host
- kind: Ingress
  policy: unique-ingress-host
  resources:
  - ingress-foo-host
  result: fail
  rule: deny-multiple-hosts
- kind: Ingress
  policy: unique-ingress-host
  resources:
  - ingress-kyverno-host
  result: skip
  rule: deny-multiple-hosts
variables: values.yaml
