test/cli/test/restrict_ingress_host/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: unique-ingress-host
  resources:
  - name: ingress-kyverno-host
    values:
      request.operation: CREATE
  - name: ingress-foo-host
    values:
      request.operation: CREATE
  rules:
  - name: check-single-host
    values:
      hosts: '["www.github.com", "www.kyverno.com", "www.nirmata.com"]'
